--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
-		"php/php": "^5.6 ^7",
-        "monolog/monolog": "^1.17"
+		"php": "~5.6.0|~7.0.0",
+        "monolog/monolog": "~1.17"
     },
 	"autoload": {
 		"psr-4": {
